# wired86

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  rundemo.sh
demos/: adding.asm  stack.asm
emulator/: CMakeLists.txt
emulator/include/cli/: executor.hpp
emulator/include/common/: assembly.hpp  convert.hpp  logging.hpp
emulator/include/common/emu/cpu/: intel8086.hpp
emulator/include/common/emu/cpu/instr/: argument.hpp  arithmeticlogic.hpp  complexinstruction.hpp  immediate.hpp  instruction.hpp  modregrm.hpp  opcode.hpp  stack.hpp
emulator/include/common/emu/cpu/reg/: registers8086.hpp
emulator/include/gui/: app.hpp  registerinput.hpp  window.hpp
emulator/src/cli/: executor.cpp  main.cpp
emulator/src/common/: convert.cpp
emulator/src/common/emu/cpu/: intel8086.cpp
emulator/src/common/emu/cpu/instr/: argument.cpp  arithmeticlogic.cpp  complexinstruction.cpp  immediate.cpp  instruction.cpp  modregrm.cpp  opcode.cpp  stack.cpp
emulator/src/common/emu/cpu/reg/: registers8086.cpp
emulator/src/gui/: app.cpp  main.cpp  registerinput.cpp  window.cpp
emulator/src/test/: testcommon.cpp  testmemory.cpp
emulator/src/test/cpu/: testinstr.cpp  testinstrrep.cpp
include/: conversion.hpp  primitives.hpp
include/cli/: executor.hpp
include/common/: conversion.hpp  convert.hpp  logging.hpp  types.hpp
include/common/emu/: memory.hpp  types.hpp
include/common/emu/cpu/: intel8086.hpp  registerindexes.hpp  registers.hpp
include/common/emu/cpu/instr/: add.hpp  immediate.hpp  instruction.hpp  modregrm.hpp  opcode.hpp  stack.hpp
include/common/emu/cpu/reg/: registers.hpp
include/emu/: memory.hpp
include/emu/cpu/: intel8086.hpp  registerindexes.hpp  registers.hpp
include/test/: testing.hpp
src/: main.cpp
src/cli/: executor.cpp  main.cpp
src/common/: conversion.cpp  convert.cpp  logging.cpp
src/common/emu/cpu/: intel8086.cpp  registerindexes.cpp
src/common/emu/cpu/instr/: immediate.cpp  instruction.cpp  modregrm.cpp  opcode.cpp  stack.cpp
src/emu/cpu/: registerindexes.cpp
src/gui/: main.cpp
src/test/: main.cpp  testmemory.cpp
src/test/cpu/: testinstr.cpp
writeup/: analysis.tex  appendices.tex  design.tex  implementation.tex  implementation_old.tex  introduction.tex  specs.tex  writeup.tex
writeup/code/: intel8086.hpp  logging.cpp  logging.hpp  memory.hpp  registerindexes.hpp  testexample.cpp
writeup/code/initial/: conversion.cpp  conversion.hpp  intel8086.hpp  memory.hpp  registerindexes.cpp  registerindexes.hpp  registers.hpp  testconversions.cpp  testmemory.cpp  testregisters.cpp
writeup/code/second/: convert.cpp  convert.hpp  furthertestconversions.cpp  intel8086.cpp  logging.cpp  logging.hpp  opcode.cpp  opcode.hpp  testinstructions.cpp
writeup/code/third/: argument.cpp  argument.hpp  assembly.hpp  complexinstruction.cpp  complexinstruction.hpp  convert.cpp  convert.hpp  instruction.cpp  instruction.hpp  intel8086.cpp  intel8086.hpp  memory.hpp  modregrm.cpp  modregrm.hpp  opcode.cpp  opcode.hpp  registers.hpp  registers8086.cpp  registers8086.hpp  testconversions.cpp  testinstrrep.cpp  teststack.cpp  types.hpp
writeup/code_old/: CMakeLists.txt  class.hpp  conversion.cpp  conversion.hpp  enum.cpp  intel8086.hpp  intel8086_registers.hpp  logging.cpp  logging.hpp  memory.hpp  memory_bruh.hpp  registers.hpp  testmemory.cpp
